alignment for prevention text

--- a/css/style.css
+++ b/css/style.css
@@ -1137,7 +1137,7 @@ body {
 }
 
 #gate-text-1 {
-    left: 32px
+    left: 25px
 }
 
 #gate-text-2,
